@@ -16,6 +16,69 @@
 
 namespace OpenRCT2::Scripting
 {
+    static const DukEnumMap<ShopItem> ShopItemMap({
+        { "beef_noodles", ShopItem::BeefNoodles },
+        { "burger", ShopItem::Burger },
+        { "candyfloss", ShopItem::Candyfloss },
+        { "chicken", ShopItem::Chicken },
+        { "chips", ShopItem::Chips },
+        { "chocolate", ShopItem::Chocolate },
+        { "cookie", ShopItem::Cookie },
+        { "doughnut", ShopItem::Doughnut },
+        { "hot_dog", ShopItem::HotDog },
+        { "fried_rice_noodles", ShopItem::FriedRiceNoodles },
+        { "funnel_cake", ShopItem::FunnelCake },
+        { "ice_cream", ShopItem::IceCream },
+        { "meatball_soup", ShopItem::MeatballSoup },
+        { "pizza", ShopItem::Pizza },
+        { "popcorn", ShopItem::Popcorn },
+        { "pretzel", ShopItem::Pretzel },
+        { "roast_sausage", ShopItem::RoastSausage },
+        { "sub_sandwich", ShopItem::SubSandwich },
+        { "tentacle", ShopItem::Tentacle },
+        { "toffee_apple", ShopItem::ToffeeApple },
+        { "wonton_soup", ShopItem::WontonSoup },
+        { "coffee", ShopItem::Coffee },
+        { "drink", ShopItem::Drink },
+        { "fruit_juice", ShopItem::FruitJuice },
+        { "iced_tea", ShopItem::IcedTea },
+        { "lemonade", ShopItem::Lemonade },
+        { "soybean_milk", ShopItem::SoybeanMilk },
+        { "sujeonggwa", ShopItem::Sujeonggwa },
+        { "balloon", ShopItem::Balloon },
+        { "hat", ShopItem::Hat },
+        { "map", ShopItem::Map },
+        { "sunglasses", ShopItem::Sunglasses },
+        { "toy", ShopItem::Toy },
+        { "tshirt", ShopItem::TShirt },
+        { "umbrella", ShopItem::Umbrella },
+        { "photo1", ShopItem::Photo },
+        { "photo2", ShopItem::Photo2 },
+        { "photo3", ShopItem::Photo3 },
+        { "photo4", ShopItem::Photo4 },
+        { "voucher", ShopItem::Voucher },
+        { "empty_bottle", ShopItem::EmptyBottle },
+        { "empty_bowl_blue", ShopItem::EmptyBowlBlue },
+        { "empty_bowl_red", ShopItem::EmptyBowlRed },
+        { "empty_box", ShopItem::EmptyBox },
+        { "empty_burger_box", ShopItem::EmptyBurgerBox },
+        { "empty_can", ShopItem::EmptyCan },
+        { "empty_cup", ShopItem::EmptyCup },
+        { "empty_drink_carton", ShopItem::EmptyDrinkCarton },
+        { "empty_juice_cup", ShopItem::EmptyJuiceCup },
+        { "rubbish", ShopItem::Rubbish },
+    });
+    // Since the ShopItem enum is missing values and includes ShopItem::Admission (something a
+    // guest cannot carry), 6 is subtracted from the value.
+    static_assert((EnumValue(ShopItem::Count) - 6) == 50, "ShopItem::Count changed, update scripting binding!");
+
+    static const DukEnumMap<uint32_t> VoucherTypeMap({
+        { "entry_free", VOUCHER_TYPE_PARK_ENTRY_FREE },
+        { "entry_half_price", VOUCHER_TYPE_PARK_ENTRY_HALF_PRICE },
+        { "ride_free", VOUCHER_TYPE_RIDE_FREE },
+        { "food_drink_free", VOUCHER_TYPE_FOOD_OR_DRINK_FREE },
+    });
+
     class ScThought
     {
     private:
@@ -103,6 +166,12 @@ namespace OpenRCT2::Scripting
         void lostCountdown_set(uint8_t value);
 
         DukValue thoughts_get() const;
+
+        DukValue items_get() const;
+        bool has_item(const DukValue& item) const;
+        void give_item(const DukValue& item) const;
+        void remove_item(const DukValue& item) const;
+        void remove_all_items() const;
     };
 
 } // namespace OpenRCT2::Scripting
