@@ -1,5 +1,6 @@
 0.4.8 (in development)
 ------------------------------------------------------------------------
+- Feature: [#21062] [Plugin] Add API for managing a guest's items.
 - Improved: [#18632] Land ownership and construction rights are now shown on top of the water.
 - Improved: [#20951] Activate OpenRCT2 window after using native file dialog on macOS.
 - Fix: [#20255] Images from the last hovered-over coaster in the object selection are not freed.
